--- a/offchain/java/pom.xml
+++ b/offchain/java/pom.xml
@@ -36,7 +36,7 @@
 		<dependency>
 			<groupId>org.hyperledger.fabric</groupId>
 			<artifactId>fabric-gateway-java</artifactId>
-			<version>1.4.1-SNAPSHOT</version>
+			<version>1.4.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
